sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: not found: value getNombresValeurs
  for (i<-1 to getNombresValeurs()-1){
               ^