sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v = 0
  for (i<-1 to getNombresValeurs()-1){
    v=getValeur(i)
    var j=i
    while(j>0&&!plusPetitQue(j-1,v)){
        copie(j-1,j)
        j=j-1
    }
    setValeur(j,v)
  }
}